--- a/pom.xml
+++ b/pom.xml
@@ -120,5 +120,11 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>annotations-api</artifactId>
+            <version>6.0.45</version>
+        </dependency>
     </dependencies>
 </project>
